2007-04-14 Carlos Nieves Onega <cnieves@iespana.es>

	* include/globals.h, include/prototype.h, src/g_register.c, 
	  src/globals.c, src/o_complex.c, src/x_event.c:
	  Added complex place list changed hook.
	  This is the list used when placing new components.
	
2007-04-07 Carlos Nieves Onega <cnieves@iespana.es>

	* src/x_dialog.c: Redraw the schematic after changing the snap size.
	  Thanks to Peter Clifton for reporting the bug. Closes bug #1657496.

2007-04-06 Carlos Nieves Onega <cnieves@iespana.es>

	* lib/system-gschemrc.in, scheme/auto-place-attribs.scm:
	  Improved the auto placing: if the attribute overlaps with pins
	  (including pinnumbers), or the pin connection direction where 
	  a net is supposed to be drawn, then the attributes are moved 
	  automatically.

2007-03-31 Peter Clifton <pcjc2@cam.ac.uk>

	* src/x_dialog.c: Fixed confirm save on page-close dialogs to correctly
	  cancel, rather than assert if the dialog is closed with the ESCAPE
	  key, or with the window-manager's destroy button.

2007-02-25 Peter Clifton <pcjc2@cam.ac.uk>

	* src/o_arc.c, src/o_box.c, src/o_circle.c, src/o_line.c,
	  src/x_multiattrib.c, src/x_pagesel.c, src/x_preview.c,
	  src/x_window.c: Replaced loosely typed function pointers such as
	  void (*draw_func)(); with more strongly typed pointers.

2007-02-24 Peter Clifton <pcjc2@cam.ac.uk>

	Merge changes to date from noscreen branch.

	2007-02-24 Peter Clifton <pcjc2@cam.ac.uk>

		* src/o_box.c: Remove a copy-paste error which added an extra arguemnt
		  when calling (*fill_func). Result was drawing errors, and an infinite
		  loop when mesh filling.

	2007-02-12 Peter Clifton <pcjc2@cam.ac.uk>

		* src/x_dialog.c: Removed all calls to o_object_recalc() 
		  now the data it calculates is no longer used.

		* src/o_arc.c, src/o_box.c, src/o_bus.c, src/o_circle.c, 
		  src/o_line.c, src/o_net.c, src/o_picture.c, src/o_pin.c, 
		  src/o_select.c, src/o_text.c: Modified drawing routines 