@@ -1,5 +1,9 @@
 2007-04-14 Carlos Nieves Onega <cnieves@iespana.es>
 
+	* src/g_hook.c: Fixed custom_world_get_single_object_bounds,
+	  and custom_world_get_object_list_bounds, so they don't traverse
+	  the whole object list.
+	
 	* include/globals.h, include/prototype.h, src/g_register.c, 
 	  src/globals.c, src/o_complex.c, src/x_event.c:
 	  Added complex place list changed hook.
